@@ -54,4 +54,5 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	jvmArgs += ["--add-opens=java.base/java.lang=ALL-UNNAMED"]
 }
